[Styling] Better handling of height to prevent double scrollbars

--- a/src/css/general/theme.css
+++ b/src/css/general/theme.css
@@ -1188,7 +1188,6 @@ div.data-blocks-ellipses {
 
 .max-content-height {
     height: 100%;
-    max-height: 100%;
 }
 
 /* Detail View Styling */
